--- a/Section 5 - Intermediate CSS/CSS - My Site/index.html
+++ b/Section 5 - Intermediate CSS/CSS - My Site/index.html
@@ -7,22 +7,67 @@
     <title>Hridyansh Pareek</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class = "top-container">
-        <img class = "top-cloud" src = "images/cloud.png" alt = "cloud-img">
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Hridyansh.</h1>
-        <p>a <span class = "pro">pro</span>grammer.</p>
-        <img class = "bottom-cloud" src = "images/cloud.png" alt = "cloud-img">
-        <img src = "images/mountain.png" alt = "mountain-img">
-      
+        <h2>a <span class="pro">pro</span>grammer.</h2>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img src="images/mountain.png" alt="mountain-img">
     </div>
-    <div class = "middle-container">
+
+    <div class="middle-container">
+        <div class="profile">
+            <img class = "hridyansh" src="https://media.giphy.com/media/B2PDGdggfv03Pdg7Yk/giphy.gif" alt="hridyansh-pareek-picture">
+            <h2>Hello.</h2>
+            <p style = "margin-bottom:50px;">I am Hridyansh Pareek, a software engineer, a competitive programmer and founder of HireEasi. Currently
+                I'm pursuing M.Tech from IIT Delhi.</p>
         </div>
-    <div class = "bottom-container"></div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="codeforces" src="https://media.giphy.com/media/srnzQSheRNrOmXobx9/giphy.gif"
+                    alt="hridyansh-pareek-codeforces">
+                <h3>Competitive Programming</h3>
+                <p class = "cp">I am a competitive programmer and I participate regularly in programming contests, currently I am a
+                    candidate master on Codeforces.</p>
+            </div>
+            <div class="skill-row">
+                <img class="web-development" src="https://media.giphy.com/media/YULPJoecGetvtOm1H0/giphy.gif"
+                    alt="hridyansh-pareek-web-developer">
+                <h3>Website Developer</h3>
+                <p class = "web-d">I am an accomplished web developer and am proficient with various technologies including React JS,
+                    Node JS, Mongo DB, SQL, HTML, CSS, JavaScript, TypeScript and Three.JS</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>I can be reached through phone as well as email</h3>
+            <p style = "width: 80%; margin:50px auto 50px auto;">My phone number is (+91)-9910545444 and my email address is hridyansh@hridyansh.com, if you want to have an awesome discussion regarding software engineering and the stock market feel free to ping me anytime.
+            </p>
+            <a class="btn" href="mailto:hridyansh@hridyansh.com">CONTACT ME</a>
+        </div>
+    </div>
+
+
+    <div class="bottom-container">
+        <a style ="text-decoration: none;"class="footer-link" href="https://www.linkedin.com/profile/worldsaver">LinkedIn</a>
+        <a style ="text-decoration: none;"class="footer-link" href="https://twitter.com/PareekHridyansh">Twitter</a>
+        <a style ="text-decoration: none;"class="footer-link" href="https://www.hridyansh.com/">Website</a>
+        <p style = "color:#EAF6F6;margin-top:40px;font-size:0.75rem;">© 2023 Hridyansh Pareek.</p>
+    </div>
+
 </body>
 
 </html>
 
-<!--Lecture 50(7:56)-->
+
+<!-- Lecture 61 -->
